chore: package 변경

--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
+    "react-markdown": "^9.0.1",
     "react-rotating-text": "^1.4.1",
     "remark": "^15.0.1",
+    "remark-gfm": "^4.0.0",
     "remark-html": "^16.0.1"
   },
   "devDependencies": {
