--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "remark-html": "^16.0.1"
   },
   "devDependencies": {
+    "@types/gtag.js": "^0.0.18",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
