--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@giscus/react": "^2.3.0",
     "@mui/material": "^5.14.18",
     "gray-matter": "^4.0.3",
     "next": "14.0.1",
@@ -17,6 +18,7 @@
     "react-dom": "^18",
     "react-icons": "^4.11.0",
     "react-markdown": "^9.0.1",
+    "react-responsive": "^9.0.2",
     "react-rotating-text": "^1.4.1",
     "remark": "^15.0.1",
     "remark-gfm": "^4.0.0",
@@ -27,11 +29,15 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@typescript-eslint/eslint-plugin": "^6.13.1",
     "autoprefixer": "^10.4.16",
     "eslint": "^8",
     "eslint-config-next": "14.0.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.0.1",
     "postcss": "^8.4.31",
     "postcss-nesting": "^12.0.1",
+    "prettier": "^3.1.0",
     "tailwindcss": "^3.3.5",
     "typescript": "^5"
   }
